--- a/frontend/src/pages/load/index.astro
+++ b/frontend/src/pages/load/index.astro
@@ -1,22 +1,62 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import Checkbox from "../../components/Checkbox.astro"
-
 ---
 
 <Layout>
-    <div class="h-screen flex flex-col items-center justify-center gap-20">
+    <div class="h-screen flex flex-col items-center justify-center gap-20 bg-gray-300">
         <h1 class="text-2xl/7 font-bold text-gray-900">
             Carga del almacén de datos
         </h1>
         <div class="h-auto flex items-start justify-center gap-7">
             <h2>Seleccione fuente:</h2>
-            <div class="flex items-start justify-center flex-col flex-wrap">
+            <div class="flex items-start justify-center flex-col flex-wrap" id="checkbox-container">
                 <Checkbox id="all-selected" text="Todas las opciones" />
-                <Checkbox id="castilla-leon" text="Castilla y León" />
-                <Checkbox id="com-val" text="Comunitat Valenciana" />
-                <Checkbox id="euskadi" text="Euskadi" />
+                <Checkbox id="cle" text="Castilla y León" />
+                <Checkbox id="cv" text="Comunitat Valenciana" />
+                <Checkbox id="eus" text="Euskadi" />
             </div>
+        </div>
+        <div class="flex items-start justify-center flex-row gap-4">
+            <button class="bg-transparent font-bold py-2 px-4 rounded border border-blue-500 hover:bg-blue-500">Cancelar</button>
+            <button class="bg-gray-500 font-bold py-2 px-4 rounded border text-white hover:border-gray-400 hover:bg-transparent hover:text-black">Cargar</button>
+            <button class="bg-pink-400 font-bold py-2 px-4 rounded border text-white hover:border-pink-400 hover:bg-transparent hover:text-black">Borrar almacén de datos</button>
         </div>
     </div>
 </Layout>
+
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const container = document.getElementById("checkbox-container");
+
+        if (container == null) {
+            return;
+        }
+
+        const allSelected = document.getElementById("all-selected") as HTMLInputElement;
+        const others = Array.from(container.querySelectorAll<HTMLInputElement>("input[type='checkbox']:not(#all-selected)"));
+
+        if (allSelected == null || others == null) {
+            return;
+        }
+
+        allSelected.addEventListener("change", (event) => {
+            if (event == null || event.target == null) {
+                return;
+            }
+            const target = event.target as HTMLInputElement;
+
+            if (target.checked) {
+                others.forEach((checkbox) => (checkbox.checked = false));
+            }
+        });
+
+        others.forEach((checkbox) => {
+            checkbox.addEventListener("change", () => {
+                if (checkbox.checked) {
+                    allSelected.checked = false;
+                }
+            });
+        });
+    });
+</script>
